Chapter 09: Black Goose Order Form

--- a/blackgoose/index.html
+++ b/blackgoose/index.html
@@ -64,6 +64,9 @@ footer img {
 </ul>
 </nav>
 
+<h2>Pizza-on-Demand</h2>
+<p><a href="pizza.html"><img src="orderhere.gif" alt="order button" width="200" height="100"></a><br>
+
 <h2>The Restaurant</h2>
 <p>The Black Goose Bistro offers casual lunch and dinner fare in a relaxed 
 atmosphere. The menu changes to highlight the freshest local 
