--- a/resume/index.html
+++ b/resume/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -33,29 +33,30 @@ and I’ll probably never stop finding things to learn about. </p>
 
 &nbsp
 
-<h2 id="works">My Works</h2>
-<p><img src="images/art1.png" alt="A vector image of tattoo esque logo of a blue jay" 
-height="300" width="300"><br>
+<h2 id="works">Some of my Works</h2>
+
+<p><a href="art1.html"><img src="images/art1.png" alt="A vector image of tattoo esque logo of a blue jay" 
+height="300" width="300"></a><br>
 A vector image of tattoo esque logo of a blue jay.</p>
 &nbsp
 
-<p><img src="images/art2.png" alt="The front of a brochure according to popular aspects of the location" 
-height="300" width="300"><br>
+<p><a href="art2.html"><img src="images/art2.png" alt="The front of a brochure according to popular aspects of the location" 
+height="300" width="300"></a><br>
 The front of a brochure according to popular aspects of the location.</p>
 &nbsp
 
-<p><img src="images/art3.png" alt="A pixel art for the beginning of a game my sister was working on" 
-height="300" width="300"><br>
+<p><a href="art3.html"><img src="images/art3.png" alt="A pixel art for the beginning of a game my sister was working on" 
+height="300" width="300"></a><br>
 A pixel art for the beginning of a game my sister was working on.</p>
 &nbsp
 
-<p><img src="images/art4.png" alt="A fake game cover art for the nintendo switch" 
-height="300" width="300"><br>
+<p><a href="art4.html"><img src="images/art4.png" alt="A fake game cover art for the nintendo switch" 
+height="300" width="300"></a><br>
 A fake game cover art for the nintendo switch.</p>
 &nbsp
 
-<p><img src="images/art5.png" alt="A rendered layout of a house plan" 
-height="300" width="300"><br>
+<p><a href="art5.html"><img src="images/art5.png" alt="A rendered layout of a house plan" 
+height="300" width="300"></a><br>
 A rendered layout of a house plan.</p>
 
 &nbsp
@@ -103,4 +104,4 @@ height="160" width="160"></a>
 height="160" width="160"></a></p>
 
 </body>
-  </html>
+<html>
