Final: Blackgoose Site

--- a/blackgoose/index.html
+++ b/blackgoose/index.html
@@ -5,37 +5,8 @@
 <head>
   <meta charset="utf-8">
   <title>Black Goose Bistro</title>
-  
-    <style>
-  body {
-    background-color: #faf2e4;
-    margin: 0 10%
-    font-family: sans-serif;
-    }
-  h1 {
-    text-align: center;
-    font-family: serif;
-    font-weight: normal;
-    text-transform: uppercase;
-    border-bottom: 1px solid #57b1dc;
-    margin-top: 30px;
-  }
-  h2 {
-    color: #d1633c;
-    font-size: 1em;
-  }
-  footer { 
- border-top: 1px solid #57b1dc;
- text-align: center;
- padding-top: 1em; 
-} 
-footer img {
- width: 40px;
- height: 40px;
- margin-left: .5em;
- margin-right: .5em; 
-} 
-  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="blackgoose.css">
 
 </head>
 
@@ -65,7 +36,7 @@ footer img {
 </nav>
 
 <h2>Pizza-on-Demand</h2>
-<p><a href="pizza.html"><img src="orderhere.gif" alt="order button" width="100" height="80"></a><br>
+<p><a href="pizza.html"><img src="orderhere.gif" alt="order button" width="200" height="100"></a><br>
 
 <h2>The Restaurant</h2>
 <p>The Black Goose Bistro offers casual lunch and dinner fare in a relaxed 
