--- a/blackgoose/pizza.html
+++ b/blackgoose/pizza.html
@@ -3,14 +3,9 @@
 <head>
   <meta charset="utf-8" >
    <title>Blackstone Bistro: Pizza-on-Demand</title>
-   <style type="text/css">
-      ol, ul { 
-     list-style-type: none;
-      }
-	body {
-	background-color: #faf2e4;
-	}
-   </style>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="blackgoose.css">
+
 </head>
 
 <body>
