--- a/blackgoose/bgnews.html
+++ b/blackgoose/bgnews.html
@@ -4,6 +4,9 @@
 <head>
 <meta charset="utf-8">
 <title>The Black Goose Bistro News</title>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="blackgoose.css">
+
 </head>
 
 <body>
