Final Web Presence

--- a/resume/index.html
+++ b/resume/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="utf-8">
 <title>Leann's Web Presence</title>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="webstyle.css">
 </head>
 <body>
 
@@ -36,30 +38,19 @@ and I’ll probably never stop finding things to learn about. </p>
 <h2 id="works">Some of my Works</h2>
 
 <p><a href="art1.html"><img src="images/art1.png" alt="A vector image of tattoo esque logo of a blue jay" 
-height="300" width="300"></a><br>
-A vector image of tattoo esque logo of a blue jay.</p>
-&nbsp
+height="300" width="300"></a><br></p>
 
 <p><a href="art2.html"><img src="images/art2.png" alt="The front of a brochure according to popular aspects of the location" 
-height="300" width="300"></a><br>
-The front of a brochure according to popular aspects of the location.</p>
-&nbsp
+height="300" width="300"></a><br></p>
 
 <p><a href="art3.html"><img src="images/art3.png" alt="A pixel art for the beginning of a game my sister was working on" 
-height="300" width="300"></a><br>
-A pixel art for the beginning of a game my sister was working on.</p>
-&nbsp
+height="300" width="300"></a><br></p>
 
 <p><a href="art4.html"><img src="images/art4.png" alt="A fake game cover art for the nintendo switch" 
-height="300" width="300"></a><br>
-A fake game cover art for the nintendo switch.</p>
-&nbsp
+height="300" width="300"></a><br></p>
 
 <p><a href="art5.html"><img src="images/art5.png" alt="A rendered layout of a house plan" 
-height="300" width="300"></a><br>
-A rendered layout of a house plan.</p>
-
-&nbsp
+height="300" width="300"></a><br></p>
 
 <h2 id="skills">Work Skills</h2>
 <ul>
