--- a/resume/art1.html
+++ b/resume/art1.html
@@ -3,25 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <title>Artwork: Bluejay Logo</title>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="webstyle.css">
 <style>
 body {
-  background-color: #ffffff;
-  margin: 0 10%;
-  font-family: sans-serif;
-  text-align: center;
-  }
+  background-color: #FFFFFF;
+  margin: 0 5%;
 
-h1 {
-  text-align: center;
-  text-transform: uppercase;
-  border-bottom: 1px solid #000000;
-  margin-top: 30px;
-}
-
-h2 {
-  color: #000000;
-  font-size: 1em;
-}
 </style>
 
 </head>
