--- a/resume/art2.html
+++ b/resume/art2.html
@@ -3,24 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>Artwork: London Brochure</title>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="webstyle.css">
 <style>
 body {
-  background-color: #ffffff;
+  background-color: #F0D7D7;
   margin: 0 10%;
-  font-family: sans-serif;
-  text-align: center;
-  }
-
-h1 {
-  text-align: center;
-  text-transform: uppercase;
-  border-bottom: 1px solid #000000;
-  margin-top: 30px;
-}
-
-h2 {
-  color: #000000;
-  font-size: 1em;
 }
 </style>
 
