--- a/resume/art3.html
+++ b/resume/art3.html
@@ -3,25 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <title>Artwork: Game Menu Card</title>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="webstyle.css">
 <style>
 body {
-  background-color: #ffffff;
-  margin: 0 10%;
-  font-family: sans-serif;
-  text-align: center;
-  }
-
-h1 {
-  text-align: center;
-  text-transform: uppercase;
-  border-bottom: 1px solid #000000;
-  margin-top: 30px;
+  background-color: #D9F0D7;
+  margin: 0 0%;
 }
-
-h2 {
-  color: #000000;
-  font-size: 1em;
-}
+</style>
 </style>
 
 </head>
